--- a/data/en/homepage.yml
+++ b/data/en/homepage.yml
@@ -74,8 +74,8 @@ about:
 
 ############################# Course ################################
 course:
-  enable : true
-  title : "Our Course"
+  enable : false
+  title : "Course"
   # course item comes from "content/**/course" folder.
 
 ########################## Call to action ############################
@@ -91,11 +91,11 @@ cta:
 ######################## Success story #############################
 success_story:
   enable : true
-  bg_image : "images/backgrounds/success-story.png"
-  title : "Success Stories"
+  bg_image : "images/backgrounds/success-story.jpg"
+  title : "Activity Program"
   content : "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt."
   # video link
-  video_link : "https://www.youtube.com/watch?v=ResipmZmpDU"
+  video_link : "#"
 
 ############################# event ################################
 event:
