--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://almujahidinmosque.netlify.app/"
+baseURL = "https://almujahidinmosque.or.id/"
 title = "Al-Mujahidin Mosque Kembangsri"
 # post pagination
 paginate = "6"
